--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,8 +64,8 @@
           <li><a class="" href="/center/charaKolomFixed" title="contact">চারা কলমের মূল্য তালিকা</a></li>
           <li><a class="smoothscroll" href="#about" title="about">চারা কলমের মজুদ</a></li>
 
-          <li><a class="" href="/center/allCenterInfo" title="contact">সেন্টারের যোগাযোগ তথ্য</a></li>
-          <li><a class="smoothscroll" href="#contact" title="contact">প্রধান কার্যালয়ের যোগাযোগ তথ্য</a></li>
+          <li><a class="" href="/center/allCenterInfo" title="contact">সেন্টারে যোগাযোগের তথ্য</a></li>
+          <li><a class="smoothscroll" href="#contact" title="contact">প্রধান কার্যালয়ে যোগাযোগের তথ্য</a></li>
 
         </ul>
 
