--- a/views/pd/expense/expense.ejs
+++ b/views/pd/expense/expense.ejs
@@ -16,18 +16,19 @@
                   <select id="center" name="center" required>
                     <option value="">সেন্টার বাছুনঃ</option>
                     <option value="all">সকল সেন্টারের তথ্য</option>
-                    <% if (centers.length >0){ %>
-                    <% centers.forEach(function (center) { %>
-                    <option value="<%= center.id %>"><%= center.center %></option>
-                    <% }) %>
-                    <% } %>
+                    <% if (centers.length >0){ %> <% centers.forEach(function
+                    (center) { %>
+                    <option value="<%= center.id %>">
+                      <%= center.center %>
+                    </option>
+                    <% }) %> <% } %>
                   </select>
                 </div>
                 <div class="col-md-4">
                   <label for="year">অর্থবছর:</label>
 
                   <select id="year" name="year">
-                    <option value="2021" selected>২০২১-২২</option>
+                    <option value="2021">২০২১-২২</option>
                     <option value="2022">২০২২-২৩</option>
                     <option value="2023">২০২৩-২৪</option>
                     <option value="2024">২০২৪-২৫</option>
@@ -42,7 +43,12 @@
                   </select>
                 </div>
                 <div class="col-md-4">
-                  <input type="submit" value="Submit" id="submit" class="btn btn-success">
+                  <input
+                    type="submit"
+                    value="Submit"
+                    id="submit"
+                    class="btn btn-success"
+                  />
                 </div>
               </div>
             </div>
@@ -60,7 +66,12 @@
         <button onclick="exportToPdf()" class="btn btn-success">
           Download PDF
         </button>
-        <button onclick="exportToExcel('tblexportData', 'খরচ')" class="btn btn-success">Export Table Data To Excel File</button>
+        <button
+          onclick="exportToExcel('tblexportData', 'খরচ')"
+          class="btn btn-success"
+        >
+          Export Table Data To Excel File
+        </button>
 
         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
@@ -69,19 +80,15 @@
   </div>
 </div>
 
-
-
 <%- include('../../includes/footer')-%>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
   async function exportToPdf() {
-    var year = $('#year').val();
-    var center = $('#center').val();
-    const {
-      data
-    } = await axios.post(`/pd/generatePdfexpense`, {
+    var year = $("#year").val();
+    var center = $("#center").val();
+    const { data } = await axios.post(`/pd/generatePdfexpense`, {
       year: year,
-      center: center
+      center: center,
     });
     var mywindow = window.open("", "PRINT", "height=400,width=600");
     mywindow.document.write(data.html);
@@ -92,14 +99,14 @@
   }
 </script>
 <script type="text/javascript">
-  function exportToExcel(tableID, filename = '') {
+  function exportToExcel(tableID, filename = "") {
     var downloadurl;
-    var dataFileType = 'application/vnd.ms-excel';
+    var dataFileType = "application/vnd.ms-excel";
     var tableSelect = document.getElementById(tableID);
-    var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
+    var tableHTMLData = tableSelect.outerHTML.replace(/ /g, "%20");
 
     // Specify file name
-    filename = filename ? filename + '.xls' : 'export_excel_data.xls';
+    filename = `expense-${new Date().toLocaleDateString()}.xls.xls`;
 
     // Create download link element
     downloadurl = document.createElement("a");
@@ -107,13 +114,13 @@
     document.body.appendChild(downloadurl);
 
     if (navigator.msSaveOrOpenBlob) {
-      var blob = new Blob(['\ufeff', tableHTMLData], {
-        type: dataFileType
+      var blob = new Blob(["\ufeff", tableHTMLData], {
+        type: dataFileType,
       });
       navigator.msSaveOrOpenBlob(blob, filename);
     } else {
       // Create a link to the file
-      downloadurl.href = 'data:' + dataFileType + ', ' + tableHTMLData;
+      downloadurl.href = "data:" + dataFileType + ", " + tableHTMLData;
 
       // Setting the file name
       downloadurl.download = filename;
@@ -124,10 +131,9 @@
   }
 </script>
 <script>
-  $(document).ready(function() {
-
-    $('.dropdown a.test').on("click", function(e) {
-      $(this).next('ul').toggle();
+  $(document).ready(function () {
+    $(".dropdown a.test").on("click", function (e) {
+      $(this).next("ul").toggle();
       e.stopPropagation();
       e.preventDefault();
     });
@@ -135,74 +141,74 @@
 </script>
 
 <script type="text/javascript">
-  $("body").on("click", "#btnExport", function() {
-    html2canvas($('#tblCustomers')[0], {
-      onrendered: function(canvas) {
+  $("body").on("click", "#btnExport", function () {
+    html2canvas($("#tblCustomers")[0], {
+      onrendered: function (canvas) {
         var data = canvas.toDataURL();
         var docDefinition = {
-          content: [{
-            image: data,
-            width: 650
-          }]
+          content: [
+            {
+              image: data,
+              width: 650,
+            },
+          ],
         };
         pdfMake.createPdf(docDefinition).download("farmer-details.pdf");
-      }
+      },
     });
   });
 
-  $("#content-wrapper").load("no url rn", function() {
-    var year = $('#year').val();
+  $("#content-wrapper").load("no url rn", function () {
+    var year = $("#year").val();
     var center = 0;
     $.ajax({
       type: "POST",
       url: "/pd/expenseFilter",
       data: {
         year: year,
-        center: center
+        center: center,
       },
       datatype: "json",
-      beforeSend: function() {
+      beforeSend: function () {
         // setting a timeout
-        $('#loading').show();
-        $('#output').hide();
-
+        $("#loading").show();
+        $("#output").hide();
       },
-      success: function(data) {
-        $('#output').html(data);
-        $('#tblCustomers').DataTable();
+      success: function (data) {
+        $("#output").html(data);
+        $("#tblCustomers").DataTable();
       },
-      complete: function() {
-        $('#loading').hide();
-        $('#output').show();
-      }
+      complete: function () {
+        $("#loading").hide();
+        $("#output").show();
+      },
     });
   });
 
-
-  $('#submit').on("click", function() {
-    var year = $('#year').val();
-    var center = $('#center').val();
+  $("#submit").on("click", function () {
+    var year = $("#year").val();
+    var center = $("#center").val();
     $.ajax({
       type: "POST",
       url: "/pd/expenseFilter",
       data: {
         year: year,
-        center: center
+        center: center,
       },
       datatype: "json",
-      beforeSend: function() {
+      beforeSend: function () {
         // setting a timeout
-        $('#loading').show();
-        $('#output').hide();
+        $("#loading").show();
+        $("#output").hide();
       },
-      success: function(data) {
-        $('#output').html(data);
-        $('#tblCustomers').DataTable();
+      success: function (data) {
+        $("#output").html(data);
+        $("#tblCustomers").DataTable();
       },
-      complete: function() {
-        $('#loading').hide();
-        $('#output').show();
-      }
+      complete: function () {
+        $("#loading").hide();
+        $("#output").show();
+      },
     });
   });
 </script>
