--- a/views/pd/dashboard.ejs
+++ b/views/pd/dashboard.ejs
@@ -8,7 +8,7 @@
             <div class="container-fluid">
                 <div class="row clearfix">
                     
-                    <div class="col ">
+                    <!-- <div class="col- ">
                         <div class="widget">
                             <div class="widget-body">
                                 <div class="d-flex justify-content-between align-items-center">
@@ -53,11 +53,10 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="col ">
-                        <div class="widget">
+                         <div class="widget">
                             <div class="widget-body">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="state">
@@ -70,9 +69,9 @@
                                 </div>
                             </div>
 
-                        </div>
-                    </div>
-                    <div class="col">
+                        </div> 
+                    </div> -->
+                    <div class="col-3 align-self-end">
                         <select id="center" class="form-control">
                             <option value="all">সব  সেন্টার</option>
                             <% center.forEach((row) => { %>
